# bazel-projects

./: .gitignore  Info.md  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
first/my-app/: BUILD
first/my-app/src/main/java/com/mycompany/anotherapp/: AnotherApp.java
first/my-app/src/main/java/com/mycompany/app/: App.java
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_World.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/mypythonapp/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
